syntax = "proto3";
package ranking.core;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCCORE";
option csharp_namespace = "SnapProto.Ranking.Core";
option java_package = "com.snap.ranking.core.proto";
option go_package = "proto";

message StoryCorpus {
    enum Corpus {
        UNSET = 0;
        TOPICS = 1;
        EVENTS = 2;
        PLACES = 3;
        LOCATIONS = 4;
        BREAKING_NEWS = 5;
        TRENDING_TOPICS = 6;
        REGIONAL_TOPICS = 7;
        POLYGON = 8;
        TOPSHARED = 9;
        SNAPCASTS = 10;
        SPOTTED = 11;
        MANUAL_STORYBUILDER = 12;
        SOLO = 13;
        MAPS_STORY = 14;
        MAPS_CALLOUT = 15;
        PUBLISHER = 16;
        PUBLIC_USER = 17;
        RECOMMENDED_USER = 18;
        PROMOTED_STORY = 19;
        GROUP_STORY = 20;
        LIVE_STREAM = 21;
        FEATURED = 22;
        COGNAC = 23;
        LENS_OBJECT = 24;
        LENS_CHALLENGE = 27;
        LENS_CHALLENGE_STORY = 28;
        SELECTION = 25;
        FRIEND_STORY = 26;
        CHANNEL_PIVOT = 29;
        CUSTOM_STORY = 30;
        OUR_STORY = 31;
        LENS_CATEGORY = 32;
        BADGE = 33;
        TOPIC_RECENT_SNAPS = 34;
        SINGLE_SNAP = 35;
        HERO_STORY = 36;
        PUBLISHER_SEGMENT = 37;
        UNUSED_38 = 38;
        UNUSED_39 = 39;
        UNUSED_40 = 40;
        UNUSED_41 = 41;
        UNUSED_42 = 42;
        UNUSED_43 = 43;
        UNUSED_44 = 44;
        UNUSED_45 = 45;
        UNUSED_46 = 46;
        UNUSED_47 = 47;
        UNUSED_48 = 48;
        UNUSED_49 = 49;
        UNUSED_50 = 50;
        UNUSED_51 = 51;
        UNUSED_52 = 52;
    }
}